      output.  MR: !51
      - This moves libmoo-perl dependency from "Recommends" to "Depends".
  * uscan:
    + Fix bad package name in git HEAD mode.  Closes: #896136
    + Modified to use common Perl modules.  MR: !51
    + Download only the good ref in gitmode shallow.  Closes: #910709; MR: !57
    + Fix documentation: -dd isn't usable, but --dd is.  MR: !58
  * French translation update.  MR: !59
  * mk-origtargz:
    + Rewritten using common Perl files. MR: !55

  [ Daniel Kahn Gillmor ]
  * uscan:
    + Fix typo in documentation, s/hush/hash.  Closes: #910759

  [ Mattia Rizzolo ]
  * mk-build-deps:
    + Add patch by Joost van Baal-Ilić to allow building a package even if the
      package doesn't have any build dependencies.  Closes: #910369

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 09 Oct 2018 23:07:22 +0200

devscripts (2.18.6) unstable; urgency=medium

  [ Unit 193 ]
  * uscan:
    + Tweak the bash completion so directory names can be tab completed.

  [ Simon McVittie ]
  * sadt:
    + Ignore the new test restriction "superficial".  MR: !50

  [ Mattia Rizzolo ]
  * tests:
    + Fix autopkgtest that was failing due to missing test dependency
      on fakeroot.  Closes: #910262

 -- Mattia Rizzolo <mattia@debian.org>  Fri, 05 Oct 2018 01:00:11 +0200

devscripts (2.18.5) unstable; urgency=medium

  [ Antoine Beaupre ]
  * debchange:
    + Bump LTS version number from 7 to 8.  Closes: #908062

  [ Mattia Rizzolo ]
  * mk-build-deps:
    + Install the README used for the equivs package into a directory
      named /templates/ to avoid the new lintian tag
      package-contains-documentation-outside-usr-share-doc.
  * wrap-and-sort:
    + Update man-page to list the --dry-run option.  Closes: #908036
  * tests:
    + pylint:
      - Re-enable the test again.
      - Appease the new pylint rule useless-object-inheritance.
    + test_package_lifecycle:
      - Adapt the expected output for dpkg-source 1.19.1.  Closes: #909719